# ddEngine

./: Cargo.toml  aa  test.js
src/: compiler.rs  lib.rs
src/interpreter/: context.rs  instruction.rs  mod.rs  stack.rs
src/interpreter/heap/: alloc.rs  mmap.rs  mod.rs
testJs/: isStrict.js  notStrict.js
